# bishop-clean

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  MIGRATION_NOTES.md  PORTFOLIO.md  ROADMAP.md
src/bernie/: __init__.py  audit.py  cli.py  model.py  runtime.py
src/bernie/tools/: default.py  file_tools.py
src/bishop/: __init__.py  agent.py  approval.py  cli.py  model.py  runtime.py  safety.py
src/bishop/clients/: __init__.py  ollama.py
src/bishop/tools/: default.py  file_tools.py  registry.py  search_tools.py  shell_tools.py
tests/: test_agent_loop.py  test_approval.py  test_audit.py  test_file_tools.py  test_ollama_client.py  test_registry.py  test_runtime.py  test_safety.py  test_search_tools.py  test_shell_tools.py
