[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bernie-clean"
version = "0.1.0"
description = "Clean local coding-agent runtime rebuilt from Bernie V1 source material."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.scripts]
bernie = "bernie.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/bernie"]

